--- a/company/pom.xml
+++ b/company/pom.xml
@@ -5,7 +5,6 @@
     <groupId>com.quarkus.service.one</groupId>
     <artifactId>company</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <compiler-plugin.version>3.11.0</compiler-plugin.version>
         <maven.compiler.release>11</maven.compiler.release>
@@ -31,6 +30,10 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-reactive-routes</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-openapi</artifactId>
