--- a/company/src/main/resources/application.properties
+++ b/company/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#http Config
+quarkus.http.root-path=/api
+quarkus.http.non-application-root-path=/q
+
+#Database
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.scripts.generation=create
