--- a/rest-client/pom.xml
+++ b/rest-client/pom.xml
@@ -73,6 +73,24 @@
             <groupId>com.quarkus.service.one</groupId>
             <artifactId>company</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-reactive-routes</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-hibernate-reactive-panache</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-resteasy-reactive-jsonb</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-reactive-pg-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
