--- a/rest-client/src/main/resources/application.properties
+++ b/rest-client/src/main/resources/application.properties
@@ -1,2 +1,5 @@
+#http Config
 quarkus.http.port=8090
-company.client/mp-rest/url=http://localhost:8080/
+quarkus.http.root-path=/
+quarkus.http.non-application-root-path=/q
+company.client/mp-rest/url=http://localhost:8080/api/
