--- a/rest-client/src/main/resources/application.properties
+++ b/rest-client/src/main/resources/application.properties
@@ -3,3 +3,7 @@ quarkus.http.port=8090
 quarkus.http.root-path=/
 quarkus.http.non-application-root-path=/q
 company.client/mp-rest/url=http://localhost:8080/api/
+
+# Configuring retries - delay Fault Tolerance properties
+Retry/maxRetries=4
+Retry/delay=3000
