--- a/rest-client/src/main/resources/application.properties
+++ b/rest-client/src/main/resources/application.properties
@@ -7,3 +7,7 @@ company.client/mp-rest/url=http://localhost:8080/api/
 # Configuring retries - delay Fault Tolerance properties
 Retry/maxRetries=4
 Retry/delay=3000
+
+# test
+%test.quarkus.http.port=6006
+quarkus.http.test-port=6006
